--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,7 +1,7 @@
 .version.portfolio /* version checker */
 {
-	color: #0000FF;
-	background-color: #C933EC;
+	color: #000008;
+	background-color: #213C8F;
 }
 
 #muse_css_mq
@@ -741,8 +741,8 @@
 {
 	color: #FFFFFF;
 	visibility: inherit;
-	font-size: 19px;
 	padding-top: 80px;
+	font-size: 19px;
 }
 
 #ppu4273-4
@@ -813,8 +813,8 @@
 	width: 782px;
 	min-height: 60px;
 	background-color: transparent;
-	color: #E792C4;
 	line-height: 30px;
+	color: #E792C4;
 	text-align: center;
 	font-size: 25px;
 	font-family: bitter, serif;
@@ -1290,13 +1290,6 @@
 	background-size: cover;
 }
 
-#pu5409-4,#pu5450-4
-{
-	width: 0.01px;
-	margin-left: 78px;
-	margin-top: 21px;
-}
-
 #u5450-4
 {
 	z-index: 195;
@@ -1406,7 +1399,125 @@
 	background-size: cover;
 }
 
-#u5379-4:hover::before,#u5371-4:hover::before,#u5363-4:hover::before,#u5355-4:hover::before,#u5347-4:hover::before,#u5339-4:hover::before,#u5318-4:hover::before,#u5387-4:hover::before,#u5398-4:hover::before,#u5409-4:hover::before,#u5412-4:hover::before,#u5415-4:hover::before,#u5450-4:hover::before,#u5461-4:hover::before,#u5464-4:hover::before
+#pu5409-4,#pu5450-4,#pu5483-4
+{
+	width: 0.01px;
+	margin-left: 78px;
+	margin-top: 21px;
+}
+
+#u5483-4
+{
+	z-index: 207;
+	width: 244px;
+	min-height: 154px;
+	-pie-box-shadow: 6px 6px 8px #7F7F7F;
+	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
+	border-style: solid;
+	border-width: 1px;
+	border-color: #E792C4;
+	line-height: 20px;
+	text-align: center;
+	font-size: 17px;
+	font-family: bitter, serif;
+	font-weight: 400;
+	margin-bottom: -1px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 1px;
+	background: #7F7F7F url("../images/leafs.jpg") no-repeat center center;
+	background-size: cover;
+}
+
+#u5483-4:hover
+{
+	-pie-box-shadow: 6px 6px 8px #7F7F7F;
+	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
+	background-repeat: no-repeat;
+	background-position: center center;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 154px;
+	width: 244px;
+	margin: 1px -10000px -1px 0px;
+	background-size: cover;
+}
+
+#u5486-4
+{
+	z-index: 211;
+	width: 244px;
+	min-height: 154px;
+	-pie-box-shadow: 6px 6px 8px #7F7F7F;
+	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
+	border-style: solid;
+	border-width: 1px;
+	border-color: #E792C4;
+	line-height: 20px;
+	text-align: center;
+	font-size: 17px;
+	font-family: bitter, serif;
+	font-weight: 400;
+	margin-bottom: -1px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 1px;
+	left: 269px;
+	background: #7F7F7F url("../images/leafs-1.jpg") no-repeat center center;
+	background-size: cover;
+}
+
+#u5486-4:hover
+{
+	-pie-box-shadow: 6px 6px 8px #7F7F7F;
+	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
+	background-repeat: no-repeat;
+	background-position: center center;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 154px;
+	width: 244px;
+	margin: 1px -10000px -1px 0px;
+	background-size: cover;
+}
+
+#u5489-4
+{
+	z-index: 215;
+	width: 244px;
+	min-height: 154px;
+	-pie-box-shadow: 6px 6px 8px #7F7F7F;
+	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
+	border-style: solid;
+	border-width: 1px;
+	border-color: #E792C4;
+	line-height: 20px;
+	text-align: center;
+	font-size: 17px;
+	font-family: bitter, serif;
+	font-weight: 400;
+	position: relative;
+	margin-right: -10000px;
+	left: 538px;
+	background: #7F7F7F url("../images/leafs-black-liner.jpg") no-repeat center center;
+	background-size: cover;
+}
+
+#u5489-4:hover
+{
+	-pie-box-shadow: 6px 6px 8px #7F7F7F;
+	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
+	background-repeat: no-repeat;
+	background-position: center center;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 154px;
+	width: 244px;
+	margin: 0px -10000px 0px 0px;
+	background-size: cover;
+}
+
+#u5379-4:hover::before,#u5371-4:hover::before,#u5363-4:hover::before,#u5355-4:hover::before,#u5347-4:hover::before,#u5339-4:hover::before,#u5318-4:hover::before,#u5387-4:hover::before,#u5398-4:hover::before,#u5409-4:hover::before,#u5412-4:hover::before,#u5415-4:hover::before,#u5450-4:hover::before,#u5461-4:hover::before,#u5464-4:hover::before,#u5483-4:hover::before,#u5486-4:hover::before,#u5489-4:hover::before
 {
 	content: "";
 	position: absolute;
@@ -1419,15 +1530,15 @@
 	box-shadow: inset -10px 58px 99px rgba(255,255,255,0.75), inset 10px -58px 99px rgba(0,0,0,0.75);
 }
 
-#u5379-4:hover p,#u5371-4:hover p,#u5363-4:hover p,#u5355-4:hover p,#u5347-4:hover p,#u5339-4:hover p,#u5318-4:hover p,#u5387-4:hover p,#u5398-4:hover p,#u5409-4:hover p,#u5412-4:hover p,#u5415-4:hover p,#u5450-4:hover p,#u5461-4:hover p,#u5464-4:hover p
+#u5379-4:hover p,#u5371-4:hover p,#u5363-4:hover p,#u5355-4:hover p,#u5347-4:hover p,#u5339-4:hover p,#u5318-4:hover p,#u5387-4:hover p,#u5398-4:hover p,#u5409-4:hover p,#u5412-4:hover p,#u5415-4:hover p,#u5450-4:hover p,#u5461-4:hover p,#u5464-4:hover p,#u5483-4:hover p,#u5486-4:hover p,#u5489-4:hover p
 {
 	color: #FFFFFF;
 	visibility: inherit;
-	font-size: 19px;
 	padding-top: 62px;
+	font-size: 19px;
 }
 
-#u5347-2,#u5318-2,#u5387-2,#u5398-2,#u5409-2,#u5412-2,#u5415-2,#u5450-2,#u5461-2,#u5464-2
+#u5347-2,#u5318-2,#u5387-2,#u5398-2,#u5409-2,#u5412-2,#u5415-2,#u5450-2,#u5461-2,#u5464-2,#u5483-2,#u5486-2,#u5489-2
 {
 	padding-top: 62px;
 	visibility: hidden;/* 100% transparent text is hidden */
@@ -1439,14 +1550,14 @@
 	width: 782px;
 	min-height: 60px;
 	background-color: transparent;
-	color: #E792C4;
 	line-height: 30px;
+	color: #E792C4;
 	text-align: center;
 	font-size: 25px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-left: 80px;
-	margin-top: 90px;
+	margin-top: 23px;
 	position: relative;
 }
 
@@ -1783,8 +1894,8 @@
 {
 	color: #FFFFFF;
 	visibility: inherit;
-	font-size: 19px;
 	padding-top: 105px;
+	font-size: 19px;
 }
 
 #u5169-2,#u5171-2,#u5173-2,#u5205-2,#u5211-2,#u5217-2
@@ -1799,8 +1910,8 @@
 	width: 782px;
 	min-height: 24px;
 	background-color: transparent;
-	color: #000000;
 	line-height: 24px;
+	color: #000000;
 	text-align: left;
 	font-size: 20px;
 	font-family: bitter, serif;
