--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #0000EF;
-	background-color: #A06013;
+	color: #0000EE;
+	background-color: #53F5A9;
 }
 
 #muse_css_mq
@@ -529,8 +529,8 @@
 	width: 329px;
 	min-height: 229px;
 	background-color: transparent;
-	color: #0092C4;
 	line-height: 46px;
+	color: #0092C4;
 	text-align: center;
 	font-size: 38px;
 	font-family: bitter, serif;
