--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,7 +1,7 @@
 .version.portfolio /* version checker */
 {
-	color: #0000F6;
-	background-color: #A465D6;
+	color: #0000ED;
+	background-color: #ED47A8;
 }
 
 #muse_css_mq
@@ -1412,11 +1412,46 @@
 	background-size: cover;
 }
 
-#pu5409-4,#pu5483-4
+#pu5409-4,#pu5464-4
 {
 	width: 0.01px;
 	margin-left: 78px;
 	margin-top: 21px;
+}
+
+#u5464-4
+{
+	z-index: 203;
+	width: 244px;
+	min-height: 154px;
+	-pie-box-shadow: 6px 6px 8px #7F7F7F;
+	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
+	border-style: solid;
+	border-width: 1px;
+	border-color: #E792C4;
+	text-align: center;
+	font-size: 17px;
+	line-height: 20px;
+	font-family: bitter, serif;
+	font-weight: 400;
+	position: relative;
+	margin-right: -10000px;
+	background: #7F7F7F url("../images/liner-multimedia-buttons-1.jpg") no-repeat center center;
+	background-size: cover;
+}
+
+#u5464-4:hover
+{
+	-pie-box-shadow: 6px 6px 8px #7F7F7F;
+	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
+	background-repeat: no-repeat;
+	background-position: center center;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 154px;
+	width: 244px;
+	margin: 0px -10000px 0px 0px;
+	background-size: cover;
 }
 
 #u5483-4
@@ -1438,6 +1473,7 @@
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 1px;
+	left: 269px;
 	background: #7F7F7F url("../images/leafs.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -1471,11 +1507,9 @@
 	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
-	margin-bottom: -1px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 1px;
-	left: 269px;
+	left: 538px;
 	background: #7F7F7F url("../images/leafs-1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -1490,8 +1524,15 @@
 	padding-bottom: 0px;
 	min-height: 154px;
 	width: 244px;
-	margin: 1px -10000px -1px 0px;
+	margin: 0px -10000px 0px 0px;
 	background-size: cover;
+}
+
+#pu5489-4
+{
+	width: 0.01px;
+	margin-left: 78px;
+	margin-top: 23px;
 }
 
 #u5489-4
@@ -1509,9 +1550,10 @@
 	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
+	margin-bottom: -1px;
 	position: relative;
 	margin-right: -10000px;
-	left: 538px;
+	margin-top: 1px;
 	background: #7F7F7F url("../images/leafs-black-liner.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -1526,15 +1568,8 @@
 	padding-bottom: 0px;
 	min-height: 154px;
 	width: 244px;
-	margin: 0px -10000px 0px 0px;
+	margin: 1px -10000px -1px 0px;
 	background-size: cover;
-}
-
-#pu5516-4
-{
-	width: 0.01px;
-	margin-left: 78px;
-	margin-top: 23px;
 }
 
 #u5516-4
@@ -1552,9 +1587,9 @@
 	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
-	margin-bottom: -1px;
 	position: relative;
 	margin-right: -10000px;
+	left: 269px;
 	background: #7F7F7F url("../images/social-life.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -1569,48 +1604,11 @@
 	padding-bottom: 0px;
 	min-height: 154px;
 	width: 244px;
-	margin: 0px -10000px -1px 0px;
+	margin: 0px -10000px 0px 0px;
 	background-size: cover;
 }
 
-#u5464-4
-{
-	z-index: 203;
-	width: 244px;
-	min-height: 154px;
-	-pie-box-shadow: 6px 6px 8px #7F7F7F;
-	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
-	border-style: solid;
-	border-width: 1px;
-	border-color: #E792C4;
-	text-align: center;
-	font-size: 17px;
-	line-height: 20px;
-	font-family: bitter, serif;
-	font-weight: 400;
-	margin-bottom: -1px;
-	position: relative;
-	margin-right: -10000px;
-	left: 269px;
-	background: #7F7F7F url("../images/liner-multimedia-buttons-1.jpg") no-repeat center center;
-	background-size: cover;
-}
-
-#u5464-4:hover
-{
-	-pie-box-shadow: 6px 6px 8px #7F7F7F;
-	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
-	background-repeat: no-repeat;
-	background-position: center center;
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 154px;
-	width: 244px;
-	margin: 0px -10000px -1px 0px;
-	background-size: cover;
-}
-
-#u5379-4:hover::before,#u5371-4:hover::before,#u5363-4:hover::before,#u5355-4:hover::before,#u5347-4:hover::before,#u5339-4:hover::before,#u5318-4:hover::before,#u5387-4:hover::before,#u5398-4:hover::before,#u5409-4:hover::before,#u5412-4:hover::before,#u5415-4:hover::before,#u5450-4:hover::before,#u5527-4:hover::before,#u5461-4:hover::before,#u5483-4:hover::before,#u5486-4:hover::before,#u5489-4:hover::before,#u5516-4:hover::before,#u5464-4:hover::before
+#u5379-4:hover::before,#u5371-4:hover::before,#u5363-4:hover::before,#u5355-4:hover::before,#u5347-4:hover::before,#u5339-4:hover::before,#u5318-4:hover::before,#u5387-4:hover::before,#u5398-4:hover::before,#u5409-4:hover::before,#u5412-4:hover::before,#u5415-4:hover::before,#u5450-4:hover::before,#u5527-4:hover::before,#u5461-4:hover::before,#u5464-4:hover::before,#u5483-4:hover::before,#u5486-4:hover::before,#u5489-4:hover::before,#u5516-4:hover::before
 {
 	content: "";
 	position: absolute;
@@ -1623,7 +1621,7 @@
 	box-shadow: inset -10px 58px 99px rgba(255,255,255,0.75), inset 10px -58px 99px rgba(0,0,0,0.75);
 }
 
-#u5379-4:hover p,#u5371-4:hover p,#u5363-4:hover p,#u5355-4:hover p,#u5347-4:hover p,#u5339-4:hover p,#u5318-4:hover p,#u5387-4:hover p,#u5398-4:hover p,#u5409-4:hover p,#u5412-4:hover p,#u5415-4:hover p,#u5450-4:hover p,#u5527-4:hover p,#u5461-4:hover p,#u5483-4:hover p,#u5486-4:hover p,#u5489-4:hover p,#u5516-4:hover p,#u5464-4:hover p
+#u5379-4:hover p,#u5371-4:hover p,#u5363-4:hover p,#u5355-4:hover p,#u5347-4:hover p,#u5339-4:hover p,#u5318-4:hover p,#u5387-4:hover p,#u5398-4:hover p,#u5409-4:hover p,#u5412-4:hover p,#u5415-4:hover p,#u5450-4:hover p,#u5527-4:hover p,#u5461-4:hover p,#u5464-4:hover p,#u5483-4:hover p,#u5486-4:hover p,#u5489-4:hover p,#u5516-4:hover p
 {
 	color: #FFFFFF;
 	visibility: inherit;
@@ -1631,7 +1629,7 @@
 	padding-top: 62px;
 }
 
-#u5347-2,#u5318-2,#u5387-2,#u5398-2,#u5409-2,#u5412-2,#u5415-2,#u5450-2,#u5527-2,#u5461-2,#u5483-2,#u5486-2,#u5489-2,#u5516-2,#u5464-2
+#u5347-2,#u5318-2,#u5387-2,#u5398-2,#u5409-2,#u5412-2,#u5415-2,#u5450-2,#u5527-2,#u5461-2,#u5464-2,#u5483-2,#u5486-2,#u5489-2,#u5516-2
 {
 	padding-top: 62px;
 	visibility: hidden;/* 100% transparent text is hidden */
