--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,7 +1,7 @@
 .version.portfolio /* version checker */
 {
-	color: #0000ED;
-	background-color: #ED47A8;
+	color: #000006;
+	background-color: #35825F;
 }
 
 #muse_css_mq
@@ -444,8 +444,8 @@
 	width: 782px;
 	min-height: 26px;
 	background-color: transparent;
-	font-size: 16px;
 	line-height: 19px;
+	font-size: 16px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -818,9 +818,9 @@
 	width: 782px;
 	min-height: 60px;
 	background-color: transparent;
-	color: #E792C4;
 	text-align: center;
 	font-size: 25px;
+	color: #E792C4;
 	line-height: 30px;
 	font-family: bitter, serif;
 	font-weight: 400;
@@ -1641,9 +1641,9 @@
 	width: 782px;
 	min-height: 60px;
 	background-color: transparent;
-	color: #E792C4;
 	text-align: center;
 	font-size: 25px;
+	color: #E792C4;
 	line-height: 30px;
 	font-family: bitter, serif;
 	font-weight: 400;
@@ -1819,9 +1819,9 @@
 	width: 782px;
 	min-height: 24px;
 	background-color: transparent;
-	color: #000000;
 	text-align: left;
 	font-size: 20px;
+	color: #000000;
 	line-height: 24px;
 	font-family: bitter, serif;
 	font-weight: 400;
