--- a/css/iefonts_451.css
+++ b/css/iefonts_451.css
@@ -13,19 +13,13 @@
 	font-family: bitter-n4, serif;
 }
 
-#u3237-6,#u3252-4
+#u5605-4,#u5609-4
 {
-	font-family: bitter-n4, serif;
+	font-family: open-sans-n7, sans-serif;
 }
 
-#u5246-4
+#u5612-6,#u5626-4
 {
-	font-family: bitter-n4, serif;
-}
-
-
-#u1423-4
-{
-	font-family: bitter-n4, serif;
+	font-family: open-sans-n4, sans-serif;
 }
 
