--- a/css/resume.css
+++ b/css/resume.css
@@ -1,7 +1,7 @@
 .version.resume /* version checker */
 {
-	color: #0000E4;
-	background-color: #D6F4B4;
+	color: #0000F6;
+	background-color: #173981;
 }
 
 #muse_css_mq
@@ -41,7 +41,7 @@
 
 #u3237-6
 {
-	z-index: 52;
+	z-index: 43;
 	width: 308px;
 	min-height: 83px;
 	margin-left: 270px;
@@ -444,7 +444,7 @@
 
 #u1253-121
 {
-	z-index: 71;
+	z-index: 58;
 	width: 782px;
 	min-height: 539px;
 	background-color: transparent;
@@ -708,7 +708,7 @@
 
 #slideshowu4628
 {
-	z-index: 192;
+	z-index: 179;
 	width: 0.01px;
 	height: 284px;
 	position: relative;
@@ -732,12 +732,12 @@
 
 #u4651popup
 {
-	z-index: 193;
+	z-index: 180;
 }
 
 #u4652
 {
-	z-index: 194;
+	z-index: 181;
 	width: 1140px;
 	height: 755px;
 	background-color: transparent;
@@ -765,12 +765,12 @@
 
 #u4631popup
 {
-	z-index: 196;
+	z-index: 183;
 }
 
 #u4638
 {
-	z-index: 197;
+	z-index: 184;
 	width: 177px;
 	height: 251px;
 	border-width: 0px;
@@ -806,7 +806,7 @@
 
 #u4650-4popup
 {
-	z-index: 199;
+	z-index: 186;
 }
 
 #u4663-4
@@ -825,7 +825,7 @@
 
 #u4663-4popup
 {
-	z-index: 203;
+	z-index: 190;
 }
 
 #u4642
@@ -858,7 +858,7 @@
 
 #u4643-4
 {
-	z-index: 208;
+	z-index: 195;
 	width: 20px;
 	min-height: 20px;
 	border-width: 0px;
@@ -904,35 +904,6 @@
 	left: 50px;
 }
 
-#pu4273-4
-{
-	width: 0.01px;
-	margin-right: -10000px;
-	margin-top: 167px;
-	margin-left: 942px;
-}
-
-#u4273-4
-{
-	z-index: 43;
-	margin-bottom: -8px;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: -1px;
-	left: -1px;
-}
-
-#u3222-5
-{
-	z-index: 47;
-	width: 114px;
-	min-height: 19px;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 64px;
-	left: -44px;
-}
-
 #u3093
 {
 	z-index: 3;
@@ -940,20 +911,19 @@
 	padding-left: 80px;
 	padding-top: 30px;
 	padding-bottom: 3px;
-	margin-bottom: -13px;
 	position: relative;
 	margin-right: -10000px;
 }
 
-#u3252-8
+#u3252-4
 {
-	z-index: 58;
+	z-index: 49;
 	width: 782px;
 	min-height: 19px;
 	position: relative;
 }
 
-#u3252-8:hover
+#u3252-4:hover
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -964,7 +934,7 @@
 
 #u5246-4
 {
-	z-index: 67;
+	z-index: 54;
 	width: 104px;
 	min-height: 19px;
 	margin-left: 758px;
@@ -983,7 +953,7 @@
 
 #u4305
 {
-	z-index: 66;
+	z-index: 53;
 	width: 33px;
 	min-height: 33px;
 	position: relative;
