--- a/css/contact-thanks.css
+++ b/css/contact-thanks.css
@@ -1,7 +1,7 @@
 .version.contact_thanks /* version checker */
 {
-	color: #000004;
-	background-color: #86C72A;
+	color: #00000F;
+	background-color: #B834D2;
 }
 
 #muse_css_mq
@@ -40,7 +40,7 @@
 
 #u3237-6
 {
-	z-index: 52;
+	z-index: 43;
 	width: 308px;
 	min-height: 83px;
 	margin-left: 270px;
@@ -455,49 +455,20 @@
 
 #u1289-10
 {
-	z-index: 71;
+	z-index: 58;
 	width: 782px;
 	min-height: 56px;
 	background-color: transparent;
-	line-height: 19px;
 	color: #9E9E9E;
 	text-align: center;
 	font-size: 16px;
+	line-height: 19px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 87px;
 	left: 130px;
-}
-
-#pu4273-4
-{
-	width: 0.01px;
-	margin-right: -10000px;
-	margin-top: 167px;
-	margin-left: 942px;
-}
-
-#u4273-4
-{
-	z-index: 43;
-	margin-bottom: -8px;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: -1px;
-	left: -1px;
-}
-
-#u3222-5
-{
-	z-index: 47;
-	width: 114px;
-	min-height: 19px;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 64px;
-	left: -44px;
 }
 
 #u3093
@@ -507,20 +478,19 @@
 	padding-left: 80px;
 	padding-top: 30px;
 	padding-bottom: 3px;
-	margin-bottom: -13px;
 	position: relative;
 	margin-right: -10000px;
 }
 
-#u3252-8
+#u3252-4
 {
-	z-index: 58;
+	z-index: 49;
 	width: 782px;
 	min-height: 19px;
 	position: relative;
 }
 
-#u3252-8:hover
+#u3252-4:hover
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -531,7 +501,7 @@
 
 #u5246-4
 {
-	z-index: 67;
+	z-index: 54;
 	width: 104px;
 	min-height: 19px;
 	margin-left: 758px;
@@ -550,7 +520,7 @@
 
 #u4305
 {
-	z-index: 66;
+	z-index: 53;
 	width: 33px;
 	min-height: 33px;
 	position: relative;
