--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,7 @@
 .version.contact /* version checker */
 {
-	color: #000012;
-	background-color: #8E7312;
+	color: #0000FE;
+	background-color: #16912F;
 }
 
 #muse_css_mq
@@ -41,7 +41,7 @@
 
 #u3237-6
 {
-	z-index: 52;
+	z-index: 43;
 	width: 308px;
 	min-height: 83px;
 	margin-left: 270px;
@@ -445,7 +445,7 @@
 
 #u1223-5
 {
-	z-index: 72;
+	z-index: 59;
 	width: 782px;
 	min-height: 56px;
 	background-color: transparent;
@@ -463,7 +463,7 @@
 
 #u1221
 {
-	z-index: 71;
+	z-index: 58;
 	width: 764px;
 	min-height: 503px;
 	border-width: 0px;
@@ -493,35 +493,6 @@
 	left: 50px;
 }
 
-#pu4273-4
-{
-	width: 0.01px;
-	margin-right: -10000px;
-	margin-top: 167px;
-	margin-left: 942px;
-}
-
-#u4273-4
-{
-	z-index: 43;
-	margin-bottom: -8px;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: -1px;
-	left: -1px;
-}
-
-#u3222-5
-{
-	z-index: 47;
-	width: 114px;
-	min-height: 19px;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 64px;
-	left: -44px;
-}
-
 #u3093
 {
 	z-index: 3;
@@ -529,20 +500,19 @@
 	padding-left: 80px;
 	padding-top: 30px;
 	padding-bottom: 3px;
-	margin-bottom: -13px;
 	position: relative;
 	margin-right: -10000px;
 }
 
-#u3252-8
+#u3252-4
 {
-	z-index: 58;
+	z-index: 49;
 	width: 782px;
 	min-height: 19px;
 	position: relative;
 }
 
-#u3252-8:hover
+#u3252-4:hover
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -553,7 +523,7 @@
 
 #u5246-4
 {
-	z-index: 67;
+	z-index: 54;
 	width: 104px;
 	min-height: 19px;
 	margin-left: 758px;
@@ -572,7 +542,7 @@
 
 #u4305
 {
-	z-index: 66;
+	z-index: 53;
 	width: 33px;
 	min-height: 33px;
 	position: relative;
