--- a/css/master_master.css
+++ b/css/master_master.css
@@ -192,34 +192,6 @@
 	cursor: pointer;
 }
 
-#u4273-4
-{
-	display: block;
-	vertical-align: top;
-}
-
-#u3222-5
-{
-	background-color: transparent;
-	border-radius: 2px;
-	font-family: bitter, serif;
-	font-weight: 400;
-	-webkit-transform: matrix(0,-1,1,0,48,67);
-	-ms-transform: matrix(0,-1,1,0,48,67);
-	transform: matrix(0,-1,1,0,48,67);
-}
-
-#u3222-3
-{
-	line-height: 0px;/* 0 for mixed font sized paras; applied on spans instead */
-}
-
-#u3222
-{
-	font-size: 13px;
-	line-height: 16px;
-}
-
 #u3104
 {
 	background-color: #333333;
@@ -230,35 +202,29 @@
 	background-color: #242424;
 }
 
-#u3252-8
+#u3252-4
 {
 	background-color: transparent;
+	color: #FFFFFF;
 	text-align: center;
 	font-size: 13px;
-	color: #FFFFFF;
 	line-height: 16px;
 	font-family: bitter, serif;
 	font-weight: 400;
-}
-
-#u3252-4
-{
-	text-decoration: none;
-	color: #FFFFFF;
 }
 
 #u5246-4
 {
 	background-color: transparent;
+	color: #E792C4;
 	text-align: center;
 	font-size: 13px;
-	color: #E792C4;
 	line-height: 16px;
 	font-family: bitter, serif;
 	font-weight: 400;
 }
 
-#u3252-8:hover p,#u3252-8:hover a,#u3252-8:hover span,#u5246-4:hover p
+#u3252-4:hover p,#u5246-4:hover p
 {
 	color: #FFFFFF;
 	visibility: inherit;
