--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,7 +1,7 @@
 .version.portfolio /* version checker */
 {
-	color: #0000F8;
-	background-color: #649374;
+	color: #000005;
+	background-color: #2FCFD7;
 }
 
 #muse_css_mq
@@ -22,12 +22,6 @@
 	margin-right: auto;
 }
 
-#page_position_content
-{
-	margin-bottom: -13px;
-	width: 0.01px;/* should not cover content below */
-}
-
 #u3090
 {
 	z-index: 2;
@@ -38,7 +32,7 @@
 
 #u3237-6
 {
-	z-index: 52;
+	z-index: 43;
 	width: 308px;
 	min-height: 83px;
 	margin-left: 270px;
@@ -440,7 +434,7 @@
 
 #u1760-5
 {
-	z-index: 71;
+	z-index: 58;
 	width: 782px;
 	min-height: 26px;
 	background-color: transparent;
@@ -463,7 +457,7 @@
 
 #u3841-9
 {
-	z-index: 79;
+	z-index: 66;
 	width: 782px;
 	min-height: 70px;
 	background-color: transparent;
@@ -518,9 +512,14 @@
 	color: #000000;
 }
 
+#page_position_content,#pu3750
+{
+	width: 0.01px;/* should not cover content below */
+}
+
 #u3750
 {
-	z-index: 78;
+	z-index: 65;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -548,7 +547,7 @@
 
 #u4546-4
 {
-	z-index: 94;
+	z-index: 81;
 	width: 239px;
 	min-height: 151px;
 	background-color: transparent;
@@ -580,7 +579,7 @@
 
 #u3749
 {
-	z-index: 77;
+	z-index: 64;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -607,7 +606,7 @@
 
 #u4549-4
 {
-	z-index: 98;
+	z-index: 85;
 	width: 245px;
 	min-height: 151px;
 	background-color: transparent;
@@ -624,7 +623,7 @@
 
 #u4349
 {
-	z-index: 92;
+	z-index: 79;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -651,7 +650,7 @@
 
 #u4552-4
 {
-	z-index: 102;
+	z-index: 89;
 	width: 245px;
 	min-height: 151px;
 	background-color: transparent;
@@ -676,7 +675,7 @@
 
 #u3748
 {
-	z-index: 76;
+	z-index: 63;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -713,7 +712,7 @@
 
 #u4555-4
 {
-	z-index: 106;
+	z-index: 93;
 	width: 245px;
 	min-height: 156px;
 	background-color: transparent;
@@ -745,53 +744,6 @@
 	padding-top: 80px;
 }
 
-#ppu4273-4
-{
-	width: 0.01px;
-	margin-right: -10000px;
-	margin-top: 16px;
-	margin-left: 992px;
-}
-
-#pu3750,#pu4273-4
-{
-	width: 0.01px;
-}
-
-#u4273-4
-{
-	z-index: 43;
-	margin-bottom: -8px;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: -1px;
-	left: -1px;
-}
-
-#u3222-5
-{
-	z-index: 47;
-	width: 114px;
-	min-height: 19px;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 64px;
-	left: -44px;
-}
-
-#u4522
-{
-	z-index: 93;
-	width: 68px;
-	min-height: 51px;
-	border-width: 0px;
-	border-color: transparent;
-	background-color: transparent;
-	margin-left: 14px;
-	margin-top: 23px;
-	position: relative;
-}
-
 #u3099
 {
 	z-index: 4;
@@ -812,15 +764,29 @@
 	left: 50px;
 }
 
+#u4522
+{
+	z-index: 80;
+	width: 68px;
+	min-height: 51px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 178px;
+	left: 1006px;
+}
+
 #u3844-4
 {
-	z-index: 88;
+	z-index: 75;
 	width: 782px;
 	min-height: 60px;
 	background-color: transparent;
+	color: #E792C4;
 	text-align: center;
 	font-size: 25px;
-	color: #E792C4;
 	line-height: 30px;
 	font-family: bitter, serif;
 	font-weight: 400;
@@ -837,7 +803,7 @@
 
 #u5379-4
 {
-	z-index: 171;
+	z-index: 158;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -873,7 +839,7 @@
 
 #u5371-4
 {
-	z-index: 167;
+	z-index: 154;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -910,7 +876,7 @@
 
 #u5363-4
 {
-	z-index: 163;
+	z-index: 150;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -954,7 +920,7 @@
 
 #u5355-4
 {
-	z-index: 159;
+	z-index: 146;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -989,7 +955,7 @@
 
 #u5347-4
 {
-	z-index: 155;
+	z-index: 142;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1027,7 +993,7 @@
 
 #u5339-4
 {
-	z-index: 151;
+	z-index: 138;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1076,7 +1042,7 @@
 
 #u5318-4
 {
-	z-index: 147;
+	z-index: 134;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1111,7 +1077,7 @@
 
 #u5387-4
 {
-	z-index: 175;
+	z-index: 162;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1149,7 +1115,7 @@
 
 #u5398-4
 {
-	z-index: 179;
+	z-index: 166;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1187,7 +1153,7 @@
 
 #u5409-4
 {
-	z-index: 183;
+	z-index: 170;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1223,7 +1189,7 @@
 
 #u5412-4
 {
-	z-index: 187;
+	z-index: 174;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1260,7 +1226,7 @@
 
 #u5415-4
 {
-	z-index: 191;
+	z-index: 178;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1304,7 +1270,7 @@
 
 #u5450-4
 {
-	z-index: 195;
+	z-index: 182;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1340,7 +1306,7 @@
 
 #u5527-4
 {
-	z-index: 223;
+	z-index: 210;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1377,7 +1343,7 @@
 
 #u5461-4
 {
-	z-index: 199;
+	z-index: 186;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1421,7 +1387,7 @@
 
 #u5464-4
 {
-	z-index: 203;
+	z-index: 190;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1456,7 +1422,7 @@
 
 #u5483-4
 {
-	z-index: 207;
+	z-index: 194;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1494,7 +1460,7 @@
 
 #u5486-4
 {
-	z-index: 211;
+	z-index: 198;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1537,7 +1503,7 @@
 
 #u5489-4
 {
-	z-index: 215;
+	z-index: 202;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1574,7 +1540,7 @@
 
 #u5516-4
 {
-	z-index: 219;
+	z-index: 206;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1637,13 +1603,13 @@
 
 #u5168-4
 {
-	z-index: 114;
+	z-index: 101;
 	width: 782px;
 	min-height: 60px;
 	background-color: transparent;
+	color: #E792C4;
 	text-align: center;
 	font-size: 25px;
-	color: #E792C4;
 	line-height: 30px;
 	font-family: bitter, serif;
 	font-weight: 400;
@@ -1661,7 +1627,7 @@
 
 #u5167
 {
-	z-index: 113;
+	z-index: 100;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1689,7 +1655,7 @@
 
 #u5169-4
 {
-	z-index: 118;
+	z-index: 105;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1710,7 +1676,7 @@
 
 #u5170
 {
-	z-index: 122;
+	z-index: 109;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1738,7 +1704,7 @@
 
 #u5171-4
 {
-	z-index: 123;
+	z-index: 110;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1759,7 +1725,7 @@
 
 #u5172
 {
-	z-index: 127;
+	z-index: 114;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1787,7 +1753,7 @@
 
 #u5173-4
 {
-	z-index: 128;
+	z-index: 115;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1815,13 +1781,13 @@
 
 #u5106-3
 {
-	z-index: 110;
+	z-index: 97;
 	width: 782px;
 	min-height: 24px;
 	background-color: transparent;
+	color: #000000;
 	text-align: left;
 	font-size: 20px;
-	color: #000000;
 	line-height: 24px;
 	font-family: bitter, serif;
 	font-weight: 400;
@@ -1833,7 +1799,7 @@
 
 #u5204
 {
-	z-index: 132;
+	z-index: 119;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1861,7 +1827,7 @@
 
 #u5205-4
 {
-	z-index: 133;
+	z-index: 120;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1882,7 +1848,7 @@
 
 #u5210
 {
-	z-index: 137;
+	z-index: 124;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1910,7 +1876,7 @@
 
 #u5211-4
 {
-	z-index: 138;
+	z-index: 125;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1931,7 +1897,7 @@
 
 #u5216
 {
-	z-index: 142;
+	z-index: 129;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1971,7 +1937,7 @@
 
 #u5217-4
 {
-	z-index: 143;
+	z-index: 130;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -2030,15 +1996,15 @@
 	margin-right: -10000px;
 }
 
-#u3252-8
+#u3252-4
 {
-	z-index: 58;
+	z-index: 49;
 	width: 782px;
 	min-height: 19px;
 	position: relative;
 }
 
-#u3252-8:hover
+#u3252-4:hover
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -2049,7 +2015,7 @@
 
 #u5246-4
 {
-	z-index: 67;
+	z-index: 54;
 	width: 104px;
 	min-height: 19px;
 	margin-left: 758px;
@@ -2068,7 +2034,7 @@
 
 #u4305
 {
-	z-index: 66;
+	z-index: 53;
 	width: 33px;
 	min-height: 33px;
 	position: relative;
